# recsys_course

./: .gitignore  README.md  pyproject.toml
data/lavka/: README.md
grocery/: pyproject.toml
grocery/src/grocery/metrics/: __init__.py  aspects.py  base.py  quality.py
grocery/src/grocery/models/: __init__.py  als.py
grocery/src/grocery/recommender/: __init__.py  candidates.py  features.py  primitives.py  recommender.py  reranking.py
grocery/src/grocery/utils/: __init__.py  dataset.py  viewer.py
week01_intro/: README.md  practice.ipynb
week02_metrics/: README.md  practice.ipynb
week03_candgen/: README.md  practice.ipynb  practice_solved.ipynb
week03_candgen/homework/: README.md  homework.ipynb  requirements.txt  train_cbm_ranker.py
week04_ranking/: README.md  practice.ipynb
week05_neural_ranking/: README.md  practice.ipynb
week05_neural_ranking/homework/: homework.ipynb  requirements.txt
week06_neural_candgen/: README.md  practice.ipynb
week07_runtime/: README.md
week07_runtime_graphs/: README.md
week08_trends/: README.md
